chore: jvm 설정값 변경